--- a/Aiwe/Views/Meta/_DetailsPart.cshtml
+++ b/Aiwe/Views/Meta/_DetailsPart.cshtml
@@ -111,8 +111,8 @@
   <br />
 </div>
 <div class="row">
-  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.BasicColoringList)</b></div>
-  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.BasicColoringList)</div>
+  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.ColoringList)</b></div>
+  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.ColoringList)</div>
   <br />
 </div>
 <div class="row">
