--- a/Aiwe/Views/Meta/_Filter.cshtml
+++ b/Aiwe/Views/Meta/_Filter.cshtml
@@ -203,8 +203,8 @@
   <div class="form-group">
     <label class="control-label @ViewBag.LabelClasses">Basic Coloring List</label>
     <div class="@ViewBag.EditorClass">
-      @Html.TextAreaFor(model => model.BasicColoringList, new { @class = "form-control form-control-plus", @rows = 6 })
-      @Html.ValidationMessageFor(model => model.BasicColoringList, "", new { @class = "text-danger" })
+      @Html.TextAreaFor(model => model.ColoringList, new { @class = "form-control form-control-plus", @rows = 6 })
+      @Html.ValidationMessageFor(model => model.ColoringList, "", new { @class = "text-danger" })
     </div>
   </div>
 
