--- a/Aiwe/Views/Common/_Filter.cshtml
+++ b/Aiwe/Views/Common/_Filter.cshtml
@@ -21,7 +21,7 @@
     if (dataType == "String") { //If the data type is string
       string dataValue = TempData[column.ColumnName]?.ToString();
       <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@column.ColumnName.ToCamelBrokenString()</label>
+        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(column.ColumnName)</label>
         <div class="@ViewBag.EditorClass">
           @if (!Model.Meta.IsFilterDropDownColumn(column.ColumnName)) {
             <input type="text" name="@column.ColumnName" class="form-control form-control-medium-plus" value="@dataValue" />
@@ -50,7 +50,7 @@
       string dataNameTo = string.Concat(column.ColumnName, Aibe.DH.BaseFilterAppendixName, dataType, Aibe.DH.ToName);
       string dataValueTo = TempData[dataNameTo]?.ToString();
       <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@column.ColumnName.ToCamelBrokenString() (from-to)</label>
+        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(column.ColumnName) (from-to)</label>
         <div class="@ViewBag.EditorClass">
           <div class="row form-control-medium-plus form-inline" style="margin-left:0px;">
             <input type="number" name="@dataNameFrom" class="form-control form-control-medium-minus" value="@dataValueFrom" /> -
@@ -77,7 +77,7 @@
       string dataTimeValueTo = dataValueDtTo.HasValue ?
       dataValueDtTo.Value.ToString("HH:mm") : null;
       <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@column.ColumnName.ToCamelBrokenString() (from)</label>
+        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(column.ColumnName) (from)</label>
         <div class="@ViewBag.EditorClass">
           <div class="row form-control-medium-plus form-inline" style="margin-left:0px;">            
             <input type="date" name="@dataNameFrom" class="form-control form-control-medium-plus" value="@dataValueFrom"/>
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@column.ColumnName.ToCamelBrokenString() (to)</label>
+        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(column.ColumnName) (to)</label>
         <div class="@ViewBag.EditorClass">
           <div class="row form-control-medium-plus form-inline" style="margin-left:0px;">
             <input type="date" name="@dataNameTo" class="form-control form-control-medium-plus" value="@dataValueTo" />
@@ -113,7 +113,7 @@
       }
 
       <div class="form-group">
-        <label class="control-label @ViewBag.LabelClasses">@column.ColumnName.ToCamelBrokenString()</label>
+        <label class="control-label @ViewBag.LabelClasses">@Model.Meta.GetColumnDisplayName(column.ColumnName)</label>
         <div class="@ViewBag.EditorClass">
           @Html.DropDownList(dataName, dropdownItems, new { @class = "form-control form-control-medium-plus" })
           @Html.ValidationMessage(dataName, new { @class = "text-danger" })
