--- a/Aiwe/Views/Meta/_CreateEditPart.cshtml
+++ b/Aiwe/Views/Meta/_CreateEditPart.cshtml
@@ -265,4 +265,19 @@
     </div>
   </div>
 
+  <div class="form-group">
+    @Html.LabelFor(model => model.ColumnSequence, htmlAttributes: new { @class = ViewBag.LabelClasses })
+    <div class="@ViewBag.EditorClass">
+      @Html.TextAreaFor(model => model.ColumnSequence, new { @class = "form-control form-control-plus", @rows = 6 })
+      @Html.ValidationMessageFor(model => model.ColumnSequence, "", new { @class = "text-danger" })
+    </div>
+  </div>
+
+  <div class="form-group">
+    @Html.LabelFor(model => model.ColumnAliases, htmlAttributes: new { @class = ViewBag.LabelClasses })
+    <div class="@ViewBag.EditorClass">
+      @Html.TextAreaFor(model => model.ColumnAliases, new { @class = "form-control form-control-plus", @rows = 4 })
+      @Html.ValidationMessageFor(model => model.ColumnAliases, "", new { @class = "text-danger" })
+    </div>
+  </div>
 </div>
