--- a/Aiwe/Views/Meta/_Filter.cshtml
+++ b/Aiwe/Views/Meta/_Filter.cshtml
@@ -278,4 +278,20 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="control-label @ViewBag.LabelClasses">Column Sequence</label>
+    <div class="@ViewBag.EditorClass">
+      @Html.TextAreaFor(model => model.ColumnSequence, new { @class = "form-control form-control-plus", @rows = 4 })
+      @Html.ValidationMessageFor(model => model.ColumnSequence, "", new { @class = "text-danger" })
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="control-label @ViewBag.LabelClasses">Column Aliases</label>
+    <div class="@ViewBag.EditorClass">
+      @Html.TextAreaFor(model => model.ColumnAliases, new { @class = "form-control form-control-plus", @rows = 4 })
+      @Html.ValidationMessageFor(model => model.ColumnAliases, "", new { @class = "text-danger" })
+    </div>
+  </div>
+
 </div>
