--- a/Aiwe/Views/Meta/_DetailsPart.cshtml
+++ b/Aiwe/Views/Meta/_DetailsPart.cshtml
@@ -170,3 +170,8 @@
   <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.ColumnAliases)</div>
   <br />
 </div>
+<div class="row">
+  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.EditShowOnlyColumns)</b></div>
+  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.EditShowOnlyColumns)</div>
+  <br />
+</div>
